--- a/ConsoleApp3/ConsoleApp3.csproj
+++ b/ConsoleApp3/ConsoleApp3.csproj
@@ -2,7 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>3.2. Переменные, константы, литералы</AssemblyName>
+    <RootNamespace>3.2. Переменные, константы, литералы</RootNamespace>
   </PropertyGroup>
 
 </Project>
